--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <h1>Read the next Line</h1>
     <p>
-        Hi Weirdo
-    </p>>
+        Hi Weirdo.
+    </p>
+    <p>
+        You are hungry.
+    </p>
 </body>
 </html>
